# rust-personnummer

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: personnummer.rs
src/: lib.rs
