[package]
name = "personnummer"
description = "Validate Swedish personal identity numbers"
version = "3.1.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bombsimon/rust-personnummer"
repository = "https://github.com/bombsimon/rust-personnummer"

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
regex = "1"
