[package]
name = "personnummer"
description = "Validate Swedish personal identity numbers"
version = "4.0.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bombsimon/rust-personnummer"
repository = "https://github.com/bombsimon/rust-personnummer"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
lazy_static = "1.4.0"
regex = "1"
